# multimodal-rag

./: .dockerignore  .env.example  .gitignore  .venvScriptsactivate  Dockerfile  README.md  app.py  colqwen_rag_maker.ipynb  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  run_app.sh
data/: unz.py
data/index_text/: docs_meta.json
scripts/build_indexes/: build_text_faiss_index.py  build_visual_embeddings.py  build_visual_metadata.py
scripts/prepare_documents/: decompress_json_gz.py  pdf_to_images.py  sort_loose_pdfs_docx.py  zip_or_unzip_folder.py
src/: __init__.py  utils.py
src/config/: bge_config.yaml  colqwen_config.yaml  text_index.yaml  visual_index.yaml
src/llm/: chat.py
src/mistral_api/: __init__.py  chat.py  prompts.yaml
src/retrieval/: __init__.py  build_text_faiss_index.py  build_visual_metadata.py  multimodal_search.py  retriever_base.py
src/retrievers/: __init__.py  build_bge_index.py  build_colqwen_meta.py  retrieve.py
streamlit_ui/: app.py
tests/: conftest.py  test_chat_unit.py  test_faiss_bge_query_dtype.py  test_mistral_api_package.py  test_mistral_live.py  test_multimodal_search_unit.py  test_retrieve_pipeline_unit.py  test_unzip_safe.py  test_utils.py
