[project]
name = "multimodal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "colpali-engine",
    "faiss-cpu>=1.9.0.post1",
    "mistralai>=1.3.1",
    "omegaconf>=2.3.0",
    "pdf2image>=1.17.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "streamlit>=1.41.1",
]

[tool.uv.sources]
colpali-engine = { git = "https://github.com/illuin-tech/colpali" }